Modificados los cards en el portafolio

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -228,10 +228,10 @@
 			    <p class="card-text">Construí mi propio portafolio para mostrar mis proyectos al mundo , fue desarrollado usando
            <b>Java con Spring Boot en el backend</b>, la interfaz gráfica está hecha con <b>Thymeleaf, Bootstrap y HTML</b>.
           </p>
-			    <a href="#" class="btn btn-dark">Ver proyecto en GitHub</a>
+			    <a href="https://github.com/AlexGCastellanos/my-portfolio" class="btn btn-dark">Ver proyecto en GitHub</a>
 			  </div>
 			</div>
-			
+			<!--
 			<div class="card p-3 mx-2" style="width: 18rem;">
 			  <img src="..." class="card-img-top" alt="...">
 			  <div class="card-body">
@@ -249,7 +249,7 @@
 			    <a href="#" class="btn btn-dark">Ver proyecto en GitHub</a>
 			  </div>
 			</div>
-		</div>
+		</div> -->
 		
         </div>
       
