--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -107,7 +107,7 @@
           <div class="col" data-aos="fade-up">
 
           <div>
-            	<img src="assets/img/portfolio/logos.png" alt="tecnologias" width="50%">
+            	<img src="assets/img/portfolio/logos.png" alt="tecnologias" width="80%">
        		</div>
 
           </div>
@@ -137,7 +137,7 @@
             </div>
             <div class="resume-item">
               <h4>Ingeniería de Sistemas y Computación</h4>
-              <h5>2016 - 2019 (Abandonado)</h5>
+              <h5>2016 - 2019 (No culminado)</h5>
               <p><em>Universidad Nacional de Colombia - Sede Bogotá</em></p>              
             </div>
             <div class="resume-item">
@@ -271,8 +271,48 @@
 	    </div>    
       <div class="row" data-aos="fade-in">
 
+        <div class="card p-3 mx-3" style="width: 30rem;">
+          <form th:action="@{contact}" method="post" th:object="${visitor}">
+           <div class="row">
+             
+             <div class="form-group col-md-6">
+               <label for="nombre"><b>Tu Nombre</b></label>                  
+               <div>
+                 <input type="text" id="nombre" class="form-control" th:field="*{nombre}">
+               </div>              	           
+             </div>
+             
+             <div class="form-group col-md-6">
+               <label for="email"><b>Tu Email</b></label>
+               <div>
+                 <input type="text" id="email" class="form-control" th:field="*{email}">
+               </div>
+               <!--  <div th:if="${#fields.hasErrors('name')}"  th:errors="*{name}"></div>  -->  
+             </div>
+           
+           </div>
+           
+           <div class="form-group">
+             <label for="asunto"><b>Asunto</b></label>
+             <div>
+               <input type="text" id="asunto" class="form-control" th:field="*{asunto}">
+             </div>
+             <!--  <div th:if="${#fields.hasErrors('name')}"  th:errors="*{name}"></div>  --> 
+           </div>
+           
+           <div class="form-group">
+             <label for="body"><b>Mensaje</b></label>
+             <textarea class="form-control" rows="10" id="body"  th:field="*{body}"></textarea>
+           </div>
+           
+           <div class="text-center p-3">
+             <input type="submit" value="Enviar mensaje" class="btn btn-primary"></input>
+           </div>
+         </form>
+       </div>
+
           <div class="col d-flex align-items-stretch">
-            <div class="info mx-3">
+            <div class="info">
               
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -292,47 +332,6 @@
                 <p>+57 319 376 85 34</p>              
 			        </div>
           </div>
-
-           <div class="card p-3 mx-2" style="width: 40rem;">
-            <form th:action="@{contact}" method="post" th:object="${visitor}">
-              <div class="row">
-                
-                <div class="form-group col-md-6">
-                  <label for="nombre"><b>Tu Nombre</b></label>                  
-              	  <div>
-              	  	<input type="text" id="nombre" class="form-control" th:field="*{nombre}">
-              	  </div>              	           
-                </div>
-                
-                <div class="form-group col-md-6">
-                  <label for="email"><b>Tu Email</b></label>
-                  <div>
-                  	<input type="text" id="email" class="form-control" th:field="*{email}">
-                  </div>
-                  <!--  <div th:if="${#fields.hasErrors('name')}"  th:errors="*{name}"></div>  -->  
-                </div>
-              
-              </div>
-              
-              <div class="form-group">
-                <label for="asunto"><b>Asunto</b></label>
-                <div>
-                	<input type="text" id="asunto" class="form-control" th:field="*{asunto}">
-                </div>
-                <!--  <div th:if="${#fields.hasErrors('name')}"  th:errors="*{name}"></div>  --> 
-              </div>
-              
-              <div class="form-group">
-                <label for="body"><b>Mensaje</b></label>
-                <textarea class="form-control" rows="10" id="body"  th:field="*{body}"></textarea>
-              </div>
-              
-              <div class="text-center p-3">
-              	<input type="submit" value="Enviar mensaje" class="btn btn-primary"></input>
-              </div>
-            </form>
-          </div>
-
         </div> 
 
       	</div>
