index y style modificados

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -271,7 +271,7 @@
 	    </div>    
       <div class="row" data-aos="fade-in">
 
-        <div class="card p-3 mx-3" style="width: 30rem;">
+        <div class="card p-3 mx-3" style="width: 25rem;">
           <form th:action="@{contact}" method="post" th:object="${visitor}">
            <div class="row">
              
@@ -311,7 +311,7 @@
          </form>
        </div>
 
-          <div class="col d-flex align-items-stretch">
+          <div class="col" style="width: 40rem;">
             <div class="info">
               
               <div class="address">
