--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -271,7 +271,8 @@
 	    </div>    
       <div class="row" data-aos="fade-in">
 
-        <div class="card p-3 mx-3" style="width: 80%">
+       <div class="col"> 
+        <div class="card p-3 m-3" style="width: 80%">
           <form th:action="@{contact}" method="post" th:object="${visitor}">
            <div class="row">
              
@@ -310,9 +311,10 @@
            </div>
          </form>
        </div>
+      </div> 
 
-          <div class="col">
-            <div class="info">
+           <div class="col"> 
+            <div class="info mx-3" style="width: 80%">
               
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -332,7 +334,8 @@
                 <p>+57 319 376 85 34</p>              
 			        </div>
           </div>
-        </div> 
+        </div>  
+     
 
       	</div>
       </div>
