Modificación de columnas en contact e info

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -272,7 +272,7 @@
       <div class="row" data-aos="fade-in">
 
        <div class="col"> 
-        <div class="card p-3 m-3" style="width: 80%">
+        <div class="card p-3 m-3" style="width: 95%">
           <form th:action="@{contact}" method="post" th:object="${visitor}">
            <div class="row">
              
@@ -314,7 +314,7 @@
       </div> 
 
            <div class="col"> 
-            <div class="info mx-3" style="width: 80%">
+            <div class="info m-3 p-3" style="width: 95%">
               
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
