Ultima modificación con optimización para móvil

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -104,10 +104,10 @@
 
         <div class="row">
 
-          <div class="col" data-aos="fade-up">
+          <div class="col m-4" data-aos="fade-up">
 
           <div>
-            	<img src="assets/img/portfolio/logos.png" alt="tecnologias" width="80%">
+            	<img src="assets/img/portfolio/logos.png" alt="tecnologias" width="85%">
        		</div>
 
           </div>
