Proyecto CRUD agregado

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -224,23 +224,25 @@
 			<div class="card p-3 mx-2" style="width: 18rem;">
 			  <img src="assets/img/portafolio-img.jpg" class="card-img-top" alt="...">
 			  <div class="card-body">
-			    <h5 class="card-title">Mi Portafolio</h5>
+			    <h5 class="card-title"><b>Mi Portafolio</b></h5>
 			    <p class="card-text">Construí mi propio portafolio para mostrar mis proyectos al mundo , fue desarrollado usando
            <b>Java con Spring Boot en el backend</b>, la interfaz gráfica está hecha con <b>Thymeleaf, Bootstrap y HTML</b>.
           </p>
 			    <a href="https://github.com/AlexGCastellanos/my-portfolio" class="btn btn-dark">Ver proyecto en GitHub</a>
 			  </div>
 			</div>
-			<!--
+			
 			<div class="card p-3 mx-2" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
+			  <img src="assets/img/proyecto-crud-jpa-img.jpg" class="card-img-top" alt="proyecto-crud">
 			  <div class="card-body">
-			    <h5 class="card-title">Card title</h5>
-			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			    <a href="#" class="btn btn-dark">Ver proyecto en GitHub</a>
+			    <h5 class="card-title"><b>CRUD App</b></h5>
+			    <p class="card-text">Gestiona tu propia lista de clientes desde una base de datos, 
+            puedes <b>crear, listar, actualizar y eliminar tus propios clientes.</b> Esta app fue creada con <b>Java, Spring Data Jpa (Hibernate), Thymeleaf, HTML y Bootstrap<b></p>
+			    <a href="https://github.com/AlexGCastellanos/spring-boot-data-crud-jpa" class="btn btn-dark my-2">Ver proyecto en GitHub</a>
+          <a href="https://crud-springboot-jpa.herokuapp.com/listar" class="btn btn-success ">Prueba la app</a>
 			  </div>
 			</div>
-			
+			<!--
 			<div class="card p-3 mx-2" style="width: 18rem;">
 			  <img src="..." class="card-img-top" alt="...">
 			  <div class="card-body">
