--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -216,46 +216,53 @@
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
-        <div class="section-title">
-          <h2>Portafolio</h2>
-          <p>Conoce algunos de mis proyectos</p>
-        </div>
-		<div class="row p-3 ">
-			<div class="card p-3 mx-2" style="width: 18rem;">
-			  <img src="assets/img/portafolio-img.jpg" class="card-img-top" alt="...">
-			  <div class="card-body">
-			    <h5 class="card-title"><b>Mi Portafolio</b></h5>
-			    <p class="card-text">Construí mi propio portafolio para mostrar mis proyectos al mundo , fue desarrollado usando
-           <b>Java con Spring Boot en el backend</b>, la interfaz gráfica está hecha con <b>Thymeleaf, Bootstrap y HTML</b>.
-          </p>
-			    <a href="https://github.com/AlexGCastellanos/my-portfolio" class="btn btn-dark">Ver proyecto en GitHub</a>
-			  </div>
-			</div>
-			
-			<div class="card p-3 mx-2" style="width: 18rem;">
-			  <img src="assets/img/proyecto-crud-jpa-img.jpg" class="card-img-top" alt="proyecto-crud">
-			  <div class="card-body">
-			    <h5 class="card-title"><b>CRUD App</b></h5>
-			    <p class="card-text">Gestiona tu propia lista de clientes desde una base de datos, 
-            puedes <b>crear, listar, actualizar y eliminar tus propios clientes.</b> Esta app fue creada con <b>Java, Spring Data Jpa (Hibernate), Thymeleaf, HTML y Bootstrap<b></p>
-			    <a href="https://github.com/AlexGCastellanos/spring-boot-data-crud-jpa" class="btn btn-dark my-2">Ver proyecto en GitHub</a>
-          <a href="https://crud-springboot-jpa.herokuapp.com/listar" class="btn btn-success ">Prueba la app</a>
-			  </div>
-			</div>
-			<!--
-			<div class="card p-3 mx-2" style="width: 18rem;">
-			  <img src="..." class="card-img-top" alt="...">
-			  <div class="card-body">
-			    <h5 class="card-title">Card title</h5>
-			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			    <a href="#" class="btn btn-dark">Ver proyecto en GitHub</a>
-			  </div>
-			</div>
-		</div> -->
+          <div class="section-title">
+            <h2>Portafolio</h2>
+            <p>Estos son algunos de mis proyectos backend, si quieres conocer más de mi trabajo puedes visitar
+              <a href="https://github.com/AlexGCastellanos/my-portfolio" class="btn btn-dark">Ver proyecto en GitHub</a>
+            </p>
+          </div>
 		
-        </div>
-      
-    </section><!-- End Portfolio Section -->
+          <div class="row">
+			
+            <div class="card p-3 m-3" style="width: 17rem;">
+              <img src="assets/img/portafolio-img.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title"><b>Mi Portafolio</b></h5>
+                <p class="card-text">Construí mi propio portafolio para mostrar mis proyectos al mundo, fue desarrollado usando
+                <b>Java con Spring Boot en el backend</b> para el manejo de envío de mensajes de correo, la interfaz gráfica está hecha con <b>Thymeleaf, Bootstrap y HTML</b>.
+                </p>
+                <a href="https://github.com/AlexGCastellanos/my-portfolio" class="btn btn-dark">Ver proyecto en GitHub</a>
+              </div>
+			      </div>
+			
+            <div class="card p-3 m-3" style="width: 17rem;">
+              <img src="assets/img/proyecto-crud-jpa-img.jpg" class="card-img-top" alt="proyecto-crud">
+              <div class="card-body">
+                <h5 class="card-title"><b>CRUD App</b></h5>
+                <p class="card-text">Gestiona tu propia lista de clientes desde una base de datos, 
+                  puedes <b>crear, listar, actualizar y eliminar tus propios clientes.</b> Esta app fue creada con <b>Java, Spring Data Jpa (Hibernate), Thymeleaf, HTML y Bootstrap</b></p>
+                <a href="https://github.com/AlexGCastellanos/spring-boot-data-crud-jpa" class="btn btn-dark my-2">Ver proyecto en GitHub</a>
+                <a href="https://crud-springboot-jpa.herokuapp.com/listar" class="btn btn-success" >Prueba la app</a>
+              </div>
+            </div>
+			
+            <div class="card p-3 m-3" style="width: 17rem;">
+              <img src="assets/img/proyecto-crud-apirest-img.jpg" class="card-img-top" alt="proyecto-crud-apirest">
+              <div class="card-body">
+                <h5 class="card-title"><b>CRUD API Rest con Angular y Spring</b></h5>
+                <p class="card-text">Un frontend realizado con <b>Angular</b> para gestionar clientes 
+                  a través del consumo de una <b>API Rest creada con Spring Boot</b> en el backend de gestionar 
+                  los registros en la base de datos MySQL
+                </p>
+                <a href="https://github.com/AlexGCastellanos/angular-crud-app" class="btn btn-dark">Ver frontend en GitHub</a>
+                <a href="https://github.com/AlexGCastellanos/springboot-backend-apirest" class="btn btn-dark my-2">Ver API Rest en GitHub</a>
+                <a href="https://angular-clientes-app.herokuapp.com/clientes" class="btn btn-success ">Prueba la app</a>
+              </div>
+            </div>		
+		    </div>      
+    </section>
+    <!-- End Portfolio Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
