Index modificado, sección de portafolio

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -219,7 +219,7 @@
           <div class="section-title">
             <h2>Portafolio</h2>
             <p>Estos son algunos de mis proyectos backend, si quieres conocer más de mi trabajo puedes visitar
-              <a href="https://github.com/AlexGCastellanos/my-portfolio" class="btn btn-dark">Ver proyecto en GitHub</a>
+              <a href="https://github.com/AlexGCastellanos/my-portfolio">mi repositorio en github</a>
             </p>
           </div>
 		
