Enlace a app angular arreglado

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -257,7 +257,7 @@
                 </p>
                 <a href="https://github.com/AlexGCastellanos/angular-crud-app" class="btn btn-dark">Ver frontend en GitHub</a>
                 <a href="https://github.com/AlexGCastellanos/springboot-backend-apirest" class="btn btn-dark my-2">Ver API Rest en GitHub</a>
-                <a href="https://angular-clientes-app.herokuapp.com/clientes" class="btn btn-success ">Prueba la app</a>
+                <a href="https://angular-clientes-app.herokuapp.com" class="btn btn-success ">Prueba la app</a>
               </div>
             </div>		
 		    </div>      
