--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -229,7 +229,7 @@ h6 {
   width: 100%;
   height: 100vh;
   background: url("../img/alexbg1.jpg") top center;
-  background-size: auto;
+  background-size: cover;
   background-position: 100%;
 }
 
