--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -228,9 +228,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/alexbg1.jpg") top center;
-  background-size: inherit;
-  background-position: 35%;
+  background: url("../img/alexbg1.jpg") top;
+  background-size: cover;  
 }
 
 #hero:before {
